@@ -5,7 +5,11 @@ Changelog for collective.emaillogin
 1.2 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Patch the login method from
+  Products.PlonePAS.plugins.cookie_handler.ExtendedCookieAuthHelper.
+  This is the code from Plone 3.3.6; it is included because Plon 3.1.7
+  does the wrong thing for us here.
+  [maurits]
 
 
 1.1 (2011-12-13)
